[package]
name = "killer-critters"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { git="https://github.com/bevyengine/bevy.git", branch="main", features = ["dynamic_linking", "jpeg"]}
rand = "0.8"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
strum = "0.26"
strum_macros = "0.26"
zerocopy = "0.7.35"

# std::time::Instant and family don't work for target "wasm32-unknown-unknown"
# web-time is an API compatible replacement
web-time = "1.1.0"

[profile.dev]
opt-level = 1

# Add these new profile configurations
[profile.dev.package.bevy]
opt-level = 3
debug = false
